discussion/kv_engine/179398/179398_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-53052: Pull ItemFrequencyDecayer wake functions into one location

We will change the behaviour for buckets sharing memory in a future
change so having only one code path makes this easier.

Change-Id: Ic0a05fccc6d977b63e1a8f346811963272d168b7

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2022-08-31 08:17:16.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-08-31 08:29:08.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19827/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kv_bucket.cc:40:10: error: "memcached/bucket_memory_manager.h" file not found [clang-diagnostic-error]
#include "memcached/bucket_memory_manager.h"
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/warmup.cc:27:10: error: "memcached/bucket_memory_manager.h" file not found [clang-diagnostic-error]
#include "memcached/bucket_memory_manager.h"
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19827/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kv_bucket.cc:40:10:
error: "memcached/bucket_memory_manager.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19827/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/48761/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/warmup.cc(27): fatal error C1083: Cannot open include file: "memcached/bucket_memory_manager.h": No such file or directory ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/48761/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40988/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/kv_bucket.cc:40:10:
fatal error: "memcached/bucket_memory_manager.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40988/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9522/ : FAILURE

Compile error at [2022-08-31T08:23:02.992Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/warmup.cc:27:10:
fatal error: "memcached/bucket_memory_manager.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9522/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/21070/ : FAILURE

Compile error at [2022-08-31T08:21:32.712Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/warmup.cc:27:10:
fatal error: "memcached/bucket_memory_manager.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/21070/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21779/ : FAILURE

Compile error at [2022-08-31T08:25:28.183Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/kv_bucket.cc:40:10:
fatal error: memcached/bucket_memory_manager.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21779/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22868/ : FAILURE

Compile error at [2022-08-31T08:25:00.344Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/warmup.cc:27:10:
fatal error: "memcached/bucket_memory_manager.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22868/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22131/ : FAILURE

Compile error at [2022-08-31T08:24:00.214Z] ../kv_engine/engines/ep/src/warmup.cc:27:10:
fatal error: memcached/bucket_memory_manager.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22131/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30160/ : FAILURE

Compile error at [2022-08-31T08:28:12.358Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/warmup.cc:27:10:
fatal error: "memcached/bucket_memory_manager.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30160/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9621/ : FAILURE

Compile error at [2022-08-31T08:25:33.290Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/engines/ep/src/kv_bucket.cc:40:10:
fatal error: memcached/bucket_memory_manager.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9621/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/19048/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
